--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Example Output:
+![](./finalOutput/exampleOne.gif)
+
+
+-----
+
 BEFORE RUNNING:
 Make sure that the following directories exist:
  1. dataLogs
